feat: implement gameplay expansion with multi-category support, drawer word selection, countdown, hints, reactions, and round recap
- Added support for multi-category room configuration with canonical identifiers.
- Implemented drawer word selection with distinct choices and global pool supplementation.
- Introduced countdown phase and auto-pick functionality for word selection.
- Added timed letter hints with progressive reveal patterns.
- Implemented quick reactions feature with a dedicated rate limiter.
- Enhanced round recap with detailed scoring and fastest guesser information.
- Updated game-state contract to include new fields and privacy measures.
- Created comprehensive unit tests for new features and ensured privacy in event publishing.
- Developed frontend components for round phase overlay and reaction bar.
- Established a reaction store for managing floating reactions in the UI.
- Added websocket message handlers to immediately fetch drawer-private choices on game start.